--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
   - type: web
     name: rails
     env: ruby
-    buildCommand: './bin/render-build.sh'
+    buildCommand: "./bin/render-build.sh"
     startCommand: bundle exec rails s
     envVars:
       - key: RAILS_MASTER_KEY
@@ -15,8 +15,8 @@ services:
         fromDatabase:
           name: postgres
           property: connectionString
-      - type: redis
-        name: redis
-        ipAllowList: []
-        plan: free
-        maxmemoryPolicy: noeviction
+  - type: redis
+    name: redis
+    ipAllowList: []
+    plan: free
+    maxmemoryPolicy: noeviction
